add complete webserver examples

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,14 +6,53 @@
     },
     "configurations": [
         {
-            "name": "Launch",
+            "name": "02_HTTP/03_Page",
             "type": "go",
             "request": "launch",
             "mode": "debug",
             "remotePath": "",
             "port": 8080,
             "host": "127.0.0.1",
-            "program": "${workspaceRoot}/01_TCP_Test3",
+            "program": "${workspaceRoot}/02_HTTP/03_Page",
+            "env": {},
+            "args": [],
+            "showLog": true
+        },
+        {
+            "name": "02/04",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 8080,
+            "host": "127.0.0.1",
+            "program": "${workspaceRoot}/02_HTTP/04_Template",
+            "env": {},
+            "args": [],
+            "showLog": true
+        },
+        {
+            "name": "99/01",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 8080,
+            "host": "127.0.0.1",
+            "program": "${workspaceRoot}/99_Test/01_StaticWeb",
+            "env": {},
+            "args": [],
+            "showLog": true
+        },
+        {
+            "name": "99/02",
+            "type": "go",
+            "request": "launch",
+            "mode": "debug",
+            "remotePath": "",
+            "port": 8080,
+            "host": "127.0.0.1",
+            "program": "${workspaceRoot}/99_Test/02_BootstrapWeb",
             "env": {},
             "args": [],
             "showLog": true
